<resources>
    <string name="app_name">CoinOps</string>
    <string name="anonymous_username">Player 1</string>
    <string name="text_placeholder">sample text</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="game_list_title">Game Collection</string>
    <string name="game_details_title">Game Details</string>
    <string name="add_game_title">Add New Game</string>
    <string name="edit_game_title">Edit Game</string>
    <string name="inventory_list_title">Inventory</string>
    <string name="inventory_details_title">Part Details</string>
    <string name="add_inventory_title">Add Part to Inventory</string>
    <string name="edit_inventory_title">Edit Part</string>
    <string name="repair_list_title">Repair Log</string>
    <string name="repair_details_title">Log Details</string>
    <string name="add_repair_title">Add New Repair Log</string>
    <string name="edit_repair_title">Edit Trouble Description</string>
    <string name="add_repair_step_title">Add Repair Step</string>
    <string name="edit_repair_step_title">Edit Repair Step</string>
    <string name="to_do_list_title">Combined To Do List</string>
    <string name="to_do_details_title">Item Details</string>
    <string name="add_to_do_title">Add To Do Item</string>
    <string name="edit_to_do_title">Edit To Do Item</string>
    <string name="shopping_list_title">Combined Shopping List</string>
    <string name="shopping_details_title">Item Details</string>
    <string name="add_shopping_title">Add Item</string>
    <string name="edit_shopping_title">Edit Item</string>
    <string name="game_details_tab1">Game\nDetails</string>
    <string name="game_details_tab2">Repair\nLogs</string>
    <string name="game_details_tab3">To Do\nList</string>
    <string name="game_details_tab4">Shopping\nList</string>
    <string name="sign_out">Sign Out</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="edit_details">Edit Details</string>
    <string name="delete">Delete</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_game">Add Game</string>
    <string name="delete_game">Delete Game</string>
    <string name="add_photo">Add Photo</string>
    <string name="new_photo">New Photo</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_inventory_item">Add Part</string>
    <string name="delete_inventory_item">Delete Part</string>
    <string name="new_trouble_report">New Trouble Report</string>
    <string name="add_repair_log">Add Log</string>
    <string name="delete_repair_log">Delete Log</string>
    <string name="add_repair_step">Add Step</string>
    <string name="delete_repair_step">Delete Step</string>
    <string name="add_item">Add Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_to_do_item">Add To Do Item</string>
    <string name="find_tech_info">Technical Info</string>
    <string name="type_label">Type:</string>
    <string name="cabinet_label">Cabinet:</string>
    <string name="status_label">Status:</string>
    <string name="ownership_label">Ownership:</string>
    <string name="condition_label">Condition:</string>
    <string name="monitor_label">Monitor:</string>
    <string name="description_label">Description:</string>
    <string name="repair_created_at_label">Issue Reported On:"</string>
    <string name="repair_description_label">Issue:</string>
    <string name="repair_steps_label">Repair Steps Taken:</string>
    <string name="priority_label">Priority:</string>
    <string name="reminder_label">Reminder</string>
    <string name="title_label">Title</string>
    <string name="repair_description_hint">Trouble Description</string>
    <string name="repair_step_name_hint">Repair Step Taken</string>
    <string name="to_do_name_hint">Title</string>
    <string name="to_do_description_hint">Notes</string>
    <string name="item_name">Needed Item</string>
    <string name="save_changes">Save Changes</string>
    <string name="not_available">N/A</string>
    <string name="off">Off</string>
    <string name="not_set">Not Set</string>
    <string name="none">None</string>
    <string name="blank" />
    <string name="select">Select&#8230;</string>
    <string name="done">Done</string>
    <string name="game_name">Game Name</string>
    <string name="select_game_type">Select Type</string>
    <string name="game_type1">Videogame</string>
    <string name="game_type2">Pinball</string>
    <string name="game_type3">Slot Machine</string>
    <string name="game_type4">Pachinko</string>
    <string name="game_type5">Other</string>
    <string name="select_game_cabinet">Select Cabinet</string>
    <string name="game_cabinet1">Original/Dedicated</string>
    <string name="game_cabinet2">Conversion</string>
    <string name="game_cabinet3">Board Only</string>
    <string name="select_game_condition">Select Condition</string>
    <string name="game_condition1">A+</string>
    <string name="game_condition2">A</string>
    <string name="game_condition3">A-</string>
    <string name="game_condition4">B+</string>
    <string name="game_condition5">B</string>
    <string name="game_condition6">B-</string>
    <string name="game_condition7">C+</string>
    <string name="game_condition8">C</string>
    <string name="game_condition9">C-</string>
    <string name="game_condition10">D</string>
    <string name="game_condition11">F</string>
    <string name="select_game_working">Select Status</string>
    <string name="game_working1">Working 100%</string>
    <string name="game_working2">Partially Working</string>
    <string name="game_working3">Non-working</string>
    <string name="select_game_monitor">Select Monitor</string>
    <string name="select_game_monitor_details">Select Monitor Details</string>
    <string name="select_game_monitor_size">Monitor Size</string>
    <string name="game_monitor_size1">13\"</string>
    <string name="game_monitor_size2">19\"</string>
    <string name="game_monitor_size3">23\"</string>
    <string name="game_monitor_size4">25\"</string>
    <string name="game_monitor_size5">27\"</string>
    <string name="select_game_monitor_type">Monitor Type</string>
    <string name="game_monitor_crt">CRT</string>
    <string name="game_monitor_lcd">LCD</string>
    <string name="game_monitor_bw">B/W</string>
    <string name="game_monitor_color">Color</string>
    <string name="game_monitor_vector">Vector</string>
    <string name="game_monitor_raster">Raster</string>
    <string name="select_game_ownership">Select Ownership</string>
    <string name="game_ownership1">Have</string>
    <string name="game_ownership2">Want</string>
    <string name="game_ownership3">Sold</string>
    <string name="inventory_name">Part Name</string>
    <string name="inventory_description">Part Description</string>
    <string name="select_inventory_type">Select Type</string>
    <string name="inventory_type1">Board</string>
    <string name="inventory_type2">Power Supply</string>
    <string name="inventory_type3">Lighting / Electrical</string>
    <string name="inventory_type4">Mechanical</string>
    <string name="inventory_type5">Control Panel</string>
    <string name="inventory_type6">Coin Mechanism</string>
    <string name="inventory_type7">Cabinet Exterior</string>
    <string name="inventory_type8">Cabinet Interior</string>
    <string name="inventory_type9">Other</string>
    <string name="select_inventory_condition">Select Condition</string>
    <string name="inventory_condition1">Working</string>
    <string name="inventory_condition2">Failed</string>
    <string name="inventory_condition3">Untested</string>
    <string name="select_priority">Select Priority</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="really_delete_game">Delete Game?</string>
    <string name="game_will_be_deleted">Are you sure you want to delete this game? The related
        repair log, to do list and shopping list will also be deleted.\n\nThis is a permanent
        action and cannot be undone.</string>
    <string name="really_delete_repair_log">Delete Repair Log?</string>
    <string name="repair_log_will_be_deleted">Are you sure you want to delete the entire repair log?
        The repair log and all repair steps will be deleted.\n\nThis is a permanent action and
        cannot be undone.</string>
    <string name="really_delete_repair_step">Delete Repair Step?</string>
    <string name="repair_step_will_be_deleted">Are you sure you want to delete this repair
        step?\n\nThis is a permanent action and cannot be undone.</string>
    <string name="really_delete_inventory_item">Delete Part?</string>
    <string name="inventory_item_will_be_deleted">Are you sure you want to delete this part? All
        data will be erased.\n\n This is a permanent action and cannot be undone.</string>
    <string name="really_delete_item">Delete Item?</string>
    <string name="item_will_be_deleted">Are you sure you want to delete this item. All data will be
    erased.\n\n This is a permanent action and cannot be undone.</string>
    <string name="error_add_game_failed">Failed to add game!</string>
    <string name="error_edit_game_failed">Failed to save changes!</string>
    <string name="error_delete_game_failed">Failed to delete game!</string>
    <string name="error_add_inventory_failed">Failed to add part!</string>
    <string name="error_edit_inventory_failed">Failed to save changes!</string>
    <string name="error_delete_inventory_failed">Failed to delete part!</string>
    <string name="error_add_repair_log_failed">Failed to add repair log!</string>
    <string name="error_edit_repair_log_failed">Failed to save changes!</string>
    <string name="error_delete_repair_log_failed">Failed to delete repair log!</string>
    <string name="error_add_repair_step_failed">Failed to add repair step!</string>
    <string name="error_edit_repair_step_failed">Failed to save changes!</string>
    <string name="error_delete_repair_step_failed">Failed to delete name!</string>
    <string name="error_add_to_do_failed">Failed to add name!</string>
    <string name="error_edit_to_do_failed">Failed to save changes!</string>
    <string name="error_delete_to_do_failed">Failed to delete name!</string>
    <string name="error_add_item_failed">Failed to add item!</string>
    <string name="error_edit_shopping_failed">Failed to save changes!</string>
    <string name="error_delete_shopping_failed">Failed to delete item!</string>
    <string name="error_please_try_again">Please try again.</string>
    <string name="error_name_empty">Name field cannot be blank. Please enter a name and try again.</string>
    <string name="error_repair_log_description_empty">Trouble description cannot be blank. Please
        describe the problem that is occurring and try again.</string>
    <string name="error_repair_step_entry_empty">Repair step cannot be blank. Please
        enter the repair action performed and try again.</string>
    <string name="error_item_name_empty">Item title cannot be blank. Please
        describe the item and try again.</string>
    <string name="network_unavailable">Network connection not found!</string>
    <string name="network_not_connected">Not connected to the Internet!</string>
    <string name="upload_failed">Image upload failed.</string>
    <string name="more">view more details</string>
    <string name="section_icon">section image</string>
    <string name="game_photo">game image</string>
    <string name="add_widget">Add widget</string>
    <string name="to_do_list_empty">To do List is empty</string>
    <string name="to_do_list_widget_title">CoinOps To Do List</string>
</resources>