<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_edit_game"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_photo"
        android:title="@string/add_photo"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_repair"
        android:title="@string/add_repair_log"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_todo"
        android:title="@string/add_to_do_item"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add_shopping"
        android:title="@string/add_item"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_delete_game"
        android:title="@string/delete_game"
        app:showAsAction="never"/>

</menu>