<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        tools:mContext=".todo.ToDoAddFragment">

        <EditText
            android:id="@+id/et_todo_name"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/primary_text_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_do_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:lines="1"
            android:imeOptions="actionDone"
            android:layout_marginLeft="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginRight="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_priority_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_marginTop="@dimen/margin"
            android:paddingLeft="@dimen/spinner_label_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_todo_name"
            android:text="@string/priority_label" />

        <RadioGroup
            android:id="@+id/rg_priority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_priority_label">

            <RadioButton
                android:id="@+id/rb_priority_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_low"/>

            <RadioButton
                android:id="@+id/rb_priority_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_medium"/>

            <RadioButton
                android:id="@+id/rb_priority_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/priority_high"/>

        </RadioGroup>

        <EditText
            android:id="@+id/et_todo_description"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_do_description_hint"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:minLines="5"
            android:maxLines="10"
            android:imeOptions="actionDone"
            android:layout_marginTop="@dimen/text_separation"
            android:layout_marginLeft="@dimen/edit_text_margin"
            android:layout_marginStart="@dimen/edit_text_margin"
            android:layout_marginRight="@dimen/edit_text_margin"
            android:layout_marginEnd="@dimen/edit_text_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_priority"/>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            app:layout_constraintTop_toBottomOf="@id/et_todo_description"
            app:layout_constraintEnd_toStartOf="@id/btn_save"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            app:layout_constraintTop_toBottomOf="@id/et_todo_description"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>