<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/card_elevation"
        app:cardBackgroundColor="@color/greyBackground">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_card_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/card_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/section_icon"
                android:src="@drawable/ic_classic_arcade_machine"/>

            <TextView
                android:id="@+id/tv_card_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_navigate_next"
                android:text="@string/game_list_title"/>

            <ImageView
                android:id="@+id/iv_navigate_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/more"
                android:src="@drawable/ic_navigate_next_24dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>